team deactivate & fix user active & readme
